--- a/electron-app/src/renderer/src/assets/index.css
+++ b/electron-app/src/renderer/src/assets/index.css
@@ -1,4 +1,8 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* body {
   display: flex;
   flex-direction: column;
   font-family:
@@ -14,14 +18,14 @@ body {
     sans-serif;
   color: #86a5b1;
   background-color: #2f3241;
-}
+} */
 
 * {
   padding: 0;
   margin: 0;
 }
 
-ul {
+/* ul {
   list-style: none;
 }
 
@@ -202,4 +206,4 @@ a:hover {
   .features .feature-item {
     width: 100%;
   }
-}
+} */
